Fix events tabs spacing

--- a/src/app/events/events.component.scss
+++ b/src/app/events/events.component.scss
@@ -16,8 +16,10 @@
     nav {
       display: flex;
       height: 42px;
-      margin-left: - ($grid-gutter-width / 4);
-      margin-right: - ($grid-gutter-width / 4);
+      margin-left: - ($grid-gutter-width / 2);
+      margin-right: - ($grid-gutter-width / 2);
+      padding-left: ($grid-gutter-width / 4);
+      padding-right: ($grid-gutter-width / 4);
       box-shadow: inset 0 -.5px 0 0 rgba(0, 0, 0, .15);
 
       button {
